# spotting-plaque-count

./: .gitignore  README.md  config.toml  pyproject.toml
prototypes/: advanced_gaussian_kernel_detection.ipynb  advanced_ring_kernel_detectoin.ipynb  combo.ipynb  gaussian_kernel_difference_detection.ipynb  ring_kernel_detection_one.ipynb
src/phageid/: __init__.py  __main__.py  _config.py  cli.py  dtypes.py  logging_config.py  read_write.py  stitching.py  user_config.py  utils.py  visualisation.py
src/phageid/convolution/: kernels.py
src/phageid/detection/: __init__.py  detection.py  detectors.py
src/phageid/detector/: detectors.py
src/phageid/preprocessing/: __init__.py
src/phageid/processing/: __init__.py  base.py  kernels.py  layers.py
src/phageid/segmentation/: __init__.py  samples.py  tray.py  trays.py
tests/: test_convolution_kernels.py  test_detect.py  test_layers.py  test_segment_samples.py  test_segment_trays.py  test_stitching.py
