[project]
name = "phageid"
version = "0.1.0"
description = "Automated counting of phage from image sequences."
authors = [{ name = "Finley Gibson", email = "f.j.gibson@exeter.ac.uk" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "platformdirs (>=4.3.7,<5.0.0)",
]

[tool.poetry]
packages = [{ include = "phageid", from = "src" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
jupyterlab = "^4.3.6"
ruff = "^0.11.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
phageid = "phageid.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 80
