[project]
name = "phageid"
version = "0.1.0"
description = "Automated counting of phage from image sequences."
authors = [{ name = "Finley Gibson", email = "f.j.gibson@exeter.ac.uk" }]
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "platformdirs (>=4.3.7,<5.0.0)",
]

[project.scripts]
phageid = "phageid.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "jupyterlab>=4.3.6,<5",
    "ruff>=0.11.4,<0.12",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["src/phageid"]

[tool.hatch.build.targets.wheel]
include = ["src/phageid"]

[tool.hatch.build.targets.wheel.sources]
"src/phageid" = "phageid"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 80
